name:          hzk
version:       4.0.0
synopsis:      Haskell client library for Apache Zookeeper
homepage:      http://github.com/dgvncsz0f/hzk
category:      Database
author:        dsouza@c0d3.xxx
license:       BSD3
license-file:  LICENSE
maintainer:    dgvncsz0f
build-type:    Simple
description:   A haskell binding to Apache Zookeeper C library
cabal-version: >= 1.16

source-repository head
  type:     git
  branch:   master
  location: git://github.com/dgvncsz0f/hzk.git

library
  default-language:    Haskell2010
  include-dirs:        /usr/include/zookeeper
  extra-libraries:     zookeeper_mt
  ghc-options:         -rtsopts -W -Wall
  default-extensions:  ForeignFunctionInterface
  build-depends:       base              (>= 4    && < 5)
                     , bytestring        (>= 0.10 && < 1)
  hs-source-dirs:      src
  exposed-modules:     Database.Zookeeper
                     , Database.Zookeeper.CApi
                     , Database.Zookeeper.Types
